[tool.poetry]
name = "vpc-cli"
version = "0.1.0"
description = "CLI for managing VPC"
authors = ["Irakli Iremashvili"]
readme = "README.md"
packages = [{include = "vpc_cli"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.133"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
